assets/css/style.css
body {
    font-family: "Oswald", sans-serif;
    letter-spacing: 3px;
     margin:0;
     padding:0;
}

 .container-fluid{
    margin:0;
    padding:0;
}

h1,h2{
    text-align:center
}




/*----------------------------------------------Header--------------------------------*/

.bg-dark {
    background-color: #51c4d3 !important;
}

h1 {
    color:#132C33;
    letter-spacing: 1px;

}
 header li a { 
    color:#132C33 !important;
    text-transform: uppercase;
    text-decoration: none;
    font-weight:500;
    font-size:25px;
    margin-left:15px;
}
 header li a:hover {
    color:#fefecc !important ;
}
.name{
    position:relative;
    float:left;
    margin-left:0;
    padding-left:0;
    font-size:35px;
}
.navbar-toggler {
    float:right;
}

/*-------------------------------------------Botton-------------------------------*/

.btn {
    padding:10px 5px;
    margin-right: 30px;
    letter-spacing:3px;
    font-size:1.2rem;
    background-color: #132C33;
    
}

button a{
    text-decoration: none;
    text-transform: uppercase;
    color:#51c4d3;
}

button a:hover {
    text-decoration: none;
    color:#51c4d3;


}
.btn:hover{
    background-color:#fefecc;
    border-color:#fefecc;
    cursor:pointer;
}

.btn-submit{
    cursor:pointer;
}



/*-------------------------------------------Carousel-----*/

.image-fluid{
    opacity: 0.9;
}

.carousel-item{
    position:relative;
    float:left;
    display:none;
    width:100%;
    margin-right: -100%;
    height:auto;

}
.carousel-caption{
    position: absolute;
    right: 15%;
    top: 25%;
    left: 15%;
    z-index: 10;
    padding-top: 20px;
    padding-bottom: 20px;
    text-align: center;

}



.btncarousel{
    margin-left:50px;
    margin-top: 10px;
    cursor:pointer;
}


   
/*

.small-image {

    height:100px;
    width:100px;
    border-style: none;
    margin: 20px;
    float:left;
    
}*/
/*-------------------------------------------Welcome Section-------------------------------*/

/*---------
.col-no-margin {
    margin:0 !important;
}
.welcome-peace {
  margin:0;
}
*/
.welcome-text {
    background-color: antiquewhite;
    margin-left:20px;
    padding:25px;
    font-size:20px;
    letter-spacing:4px;
    text-transform: uppercase;

    }
/*
.sub-heading{
    padding:5px 0;
}

.featurette{
    margin-top:0;
    background-color:antiquewhite;
}
.featurette-image{
    width:100%;
}

.section-divider {
    background-color: antiquewhite;
}
/*
.small-image{
    margin:0;
    padding:0;
    float:left;
    vertical-align: middle;
    background-position: 100%;
    }
    
*/
/*--------------------------------Testimonials------------------------------*/

.testimonials {
    text-align: center;
}

.testimonials-header{
    padding-bottom:20px;
}
/*-------------------------------------------Footer-------------------------------*/
/*
footer {
    margin:0;
    padding:0;
    background-color:#51c4d3;
    min-height: 120px;
    width: 100%;
    line-height:10px;
    }


footer h5 {
    text-transform: uppercase;
    padding-top:5px;
    font-size: medium;
    margin-bottom: 2px;;
}

footer p,a{
    margin-bottom: 10px;
}
.contact-us{
    margin-left:30px;
    float:left;
}   
    


.socials {
   margin-right:30px;
   float:right; 
    
}
*/

footer a{
    text-decoration:none;
    color:#132C33;
    padding:5px;
}

footer a:hover{
    color:#fefecc;
    text-decoration: none;
}



.card-text,
.card-title {
    text-align: center;
}

.card-body {
    background-color: #51c4d3;
}

/*--------------------------------hr-
.break-line{
   background-color:#132C33;
    width:70px;
}
-----------------------------*/


/*--------------------------------Form Section------------------------------*/

.book-class img{
   
    background-size:cover;
    height: auto;
    width:100%;
    opacity: 0.7;

}
.form-title {
    text-align: center;
   
    

}

.form-box {
    top: 20%;
    left: 0;
    margin: 20px;
    max-width: 500px;
    height:auto;
    padding:15px;
    background-color:antiquewhite;
    text-transform: uppercase;
    position:absolute;
    overflow:auto;
}


.btn-submit {
    background-color:#132C33;
    color:#51c4d3;
    border-color: antiquewhite;
    padding:5px;
    text-transform: uppercase;
}

.btn-submit:hover {
    background-color:#51c4d3;
    color:#132C33;
}

.contact-info{
    text-align:center;
    background-color: antiquewhite;
}



/*--
@media only screen and (min-width: 600px)
@media only screen and (min-width: 768px)
@media only screen and (min-width: 992px)

   
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px
---*/


/*-------------------------Fees and timetable----------------------------*/

.fees {
    background-color:antiquewhite;
    text-align: center;
    margin-top:75px;
}

.fee-heading {
    padding-top:20px;
    padding-bottom:10px;
    text-align:center;
}
.fee-p {
    font-size:20px;
}

.col {
    padding-right:0;
}

::after, ::before {
    box-sizing: border-box;
}

thead {
    display: table-header-group;
    vertical-align: middle;
    text-align: center;
    border-color:#132C33;

    
}

.fee-divider {
    margin-bottom:15px;
}

.extra-booking-info {
    background-color: antiquewhite;
    padding-left: 15px;
    padding-right: 10px;
}

/*-------------------------------------------Services-----*/


.services-image
 {
    height:300px;
    width:100%;
    margin-bottom: 50px;
    opacity: 0.9;
    border-radius: 2%;
}
.kcr {
    background-color: antiquewhite;  
}
.group-classes {
    background-color: antiquewhite;
}

.pt-services{
    background-color: antiquewhite;
}
.services-text {
    font-size: 20px;
}
.services h1 {
    margin-bottom: 20px;
    margin-top:20px;
   
}
.services-list {
    padding-top:20px;
  
}

.top-heading {
    padding-top:75px;

}
       
   
    
    


/*--------------------------------Media Querys------------------------------*/

@media screen and (max-width:460px) {

 header li a {
     text-align: center;
 }

 .btn-navbar {
     display: none;
 }
.carousel-item{
    height:100%;
}
 .form-box{
    position:absolute;
    overflow:auto;
}
}

@media screen and (max-width:768px){

    .btn-navbar {
        display: none;
    }

    .navbar-toggler {
        display: inline-block;
    }
    .carousel-item{
        height:100%;
}
 .form-box{
    position:absolute;
    width:100%;
    top:15%;
    
    
}
 .form-image {
    margin-top:80px;
    width:100%;
}

}


@media screen and (max-width:992px) {

 .btn-navbar {
    display: none;
}
.navbar-nav {
    display:inline-flex;
    font-size: x-small;
}


}

